--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
             <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>axistools-maven-plugin</artifactId>
+               <version>1.3</version>
                <configuration>
                   <sourceDirectory>src/main/wsdl</sourceDirectory>
                   <packageSpace>com.codeplex.soap</packageSpace>
